packages/errors/test/__snapshots__/NO_PROJECT_FOUND_AT_PROJECT_ROOT.ansi
[31mCan't find a project at the path: [94m/path/to/project[39m[31m[39m